test/langtools/tools/javac/recovery/NoCrashForError.out
NoCrashForError.java:10:13: compiler.err.operator.cant.be.applied: !, java.lang.Number
1 error
